Se termina la parte de bienvenida, se arreglan algunos textos que estaban mal, se corrige la parte de registro para una mejor bienvenida y se corrigen bugs menores

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -117,6 +117,14 @@
         <item>1998</item>
         <item>1999</item>
         <item>2000</item>
+        <item>2001</item>
+        <item>2002</item>
+        <item>2003</item>
+        <item>2004</item>
+        <item>2005</item>
+        <item>2006</item>
+        <item>2007</item>
+        <item>2008</item>
     </string-array>
     <string-array name="sexo">
         <item>Masculino</item>
